# sloc

./: .gitignore  .travis.yml  Cargo.toml  Makefile
src/: counting.rs  files.rs  lib.rs  main.rs
tests/: tests.rs
